feat(*): add _posts

--- a/_posts/2011-12-31-hello.md
+++ b/_posts/2011-12-31-hello.md
@@ -1,6 +1,8 @@
 ---
 layout: post
-title:  "Welcome to Jekyll!"
+title: "Hello"
+date: 2011-12-31 hh:mm:ss -0000
+categories: CATEGORY-1 CATEGORY-2
 ---
 
 # Welcome
