feat(*): 调整 markdown 格式和网站默认编码
Closes #13

--- a/_posts/2022-12-20-DNS解析.md
+++ b/_posts/2022-12-20-DNS解析.md
@@ -3,12 +3,12 @@ layout: post
 title: "DNS解析"
 date: 2022-12-20
 categories: "2022"
+tags: DNS
 ---
-# DNS解析
-## dig命令
+### dig命令
 使用 _**dig**_ 命令,可以显示整个DNS查询过程,该命令会输出6段信息.
 > 基本用法: ``dig <DNS Address> <Address>``
-> 
+
 **_Example：_**
 ```bash
 jiaqi.zhang@jiaqizhangs-MacBook-Pro ~ % dig www.baidu.com
@@ -50,7 +50,7 @@ ns3.BAIDU.com.        12    IN    A    112.80.248.64
 
 jiaqi.zhang@jiaqizhangs-MacBook-Pro ~ %
 ```
-## 参数解释:
+### 参数解释:
 **_第一段:_**
 ```bash
 ; <<>> DiG 9.10.6 <<>> www.baidu.com ## dig这个程序的版本号和要查询的域名
@@ -131,12 +131,12 @@ ns3.BAIDU.com.        12    IN    A    112.80.248.64
 ## 5、域名对应的ip地址。
 ```
 **_第六段_**
-```
+```bash
 ;; Query time: 8 msec ## 查询耗时
 ;; SERVER: 192.168.2.54#53(192.168.2.54) ## 查询使用的服务器地址和端口,其实就是本地DNS域名服务器和端口
 ;; WHEN: Fri Jan 06 14:59:42 CST 2023 ## 查询的时间
 ;; MSG SIZE  rcvd: 471 ## 回应大小。收到(rcve, recieved)471字节。
 ```
-## 参考文章
+### 参考文章
 - [DNS 原理入门](https://www.ruanyifeng.com/blog/2016/06/dns.html)
 - [dig请求和回应中的参数解释](https://blog.csdn.net/charleslei/article/details/51226741)
