fix(*): update 2022-13-30-字符集的历史

--- a/_posts/2011-12-31-hello.md
+++ b/_posts/2011-12-31-hello.md
@@ -5,9 +5,4 @@ date: 2011-12-31
 categories: "2011"
 tags: hello
 ---
-
-# Welcome
-
-**Hello world**, this is my first Jekyll blog post.
-
-I hope you like it!
+this is my first Jekyll blog post. I hope you like it!
