feat(*): 移动图片路径

--- a/_posts/2022-12-20-Charles v4.6.2长时间抓包导致OOM.md
+++ b/_posts/2022-12-20-Charles v4.6.2长时间抓包导致OOM.md
@@ -43,4 +43,4 @@ tags: charles
 
 但是,实际在mac上打开Charles包文件夹下Contents中的Info.plist文件,并没有VMOptions参数,只有一个JVMOptions参数。在array中添加并修改配置项-Xmx256m中的数字大小.
 
-<img src="./assets/image-20230109152140176.png" style="zoom:50%;" align="left">
+<img src="../img/image-20230109152140176.png" style="zoom:50%;" align="left">
