--- a/_posts/2023-02-09-尼泊尔旅游签证申请流程.md
+++ b/_posts/2023-02-09-尼泊尔旅游签证申请流程.md
@@ -11,8 +11,8 @@ tags: 旅行
 
 - 上述步骤中说明：“ 中国护照持有者，证件类别选择 **passport.**，不要选**travel document. **”
 
-  ![image-20230209213546564](./assets/image-20230209213546564.png)
+  <img alt="image-20230209213546564" src="../img/image-20230209213546564.png"/>
 
   在填写期间，下拉框中并没有 ***passport*** 该选项，经打电话核实后选择 **Ordinary**
 
-  <img src="./assets/image-20230209213841608.png" alt="image-20230209213841608" style="zoom:50%;" />
+  <img src="../img/image-20230209213841608.png" alt="image-20230209213841608" style="zoom:50%;" />
