--- a/_posts/2022-02-19-Docker配置镜像源.md
+++ b/_posts/2022-02-19-Docker配置镜像源.md
@@ -36,5 +36,5 @@ Setings --> Docker Engine，在Docker Engine里配置新增镜像配置:
 
 ***查看配置***
 
-<img src="{{site.url}}/img/image-20230112103959941.png" style="zoom:50%;" align="left"/>
+<img src="{{site.url}}/img/image-20230112103959941.png" style="zoom:50%;"/>
 
