--- a/_drafts/呼叫中心测试总结.md
+++ b/_drafts/呼叫中心测试总结.md
@@ -15,7 +15,7 @@ tags: CallCenter
 
     - 前端测试点为：UI ，系统功能，页面加载/渲染，调用接口，接口传参，平台兼容性，系统兼容性。
 
-    - 后端测试点为：入参，防御性，业务逻辑，出参，数据落库，慢 SQL，响应时间，幂等，超时，错误码，对接三方鉴权，日志输出，监控的配置，权限管理（垂直、水平），状态机
+    - 后端测试点为：防御性入参，业务逻辑，出参，数据落库，慢 SQL，响应时间，幂等，超时，错误码，对接三方鉴权，日志输出，监控的配置，权限管理（垂直、水平），状态机
   - 呼入期间：IVR 流程分为配置流程+人工坐席服务两部分，通常为开场白、按键导航、转人工、客服接入、满意度评价、挂机等节点。每个流程节点大致可看为入口，节点，出口。
       - 测试范围：
           - 呼入节点流程与预期节点配置流程一致
