feat(*): 互换 tag和分类内容

--- a/_posts/2022-02-19-Docker配置镜像源.md
+++ b/_posts/2022-02-19-Docker配置镜像源.md
@@ -2,8 +2,8 @@
 layout: mypost
 title: "Docker配置镜像源"
 date: 2022-02-19
-categories: "2022"
-tags: Docker
+categories: "docker"
+tags: 2022
 ---
 
 ***本地环境***
