--- a/_posts/2022-12-20-DNS解析.md
+++ b/_posts/2022-12-20-DNS解析.md
@@ -2,8 +2,8 @@
 layout: mypost
 title: "DNS解析"
 date: 2022-12-20
-categories: "2022"
-tags: DNS
+categories: "dns"
+tags: 2022
 ---
 ### dig命令
 使用 _**dig**_ 命令,可以显示整个DNS查询过程,该命令会输出6段信息.
