--- a/_posts/2023-02-09-尼泊尔旅游签证申请流程.md
+++ b/_posts/2023-02-09-尼泊尔旅游签证申请流程.md
@@ -2,8 +2,8 @@
 layout: mypost
 title: "尼泊尔旅游签证申请流程"
 date: 2023-02-09
-categories: "2023"
-tags: 旅行
+categories: "旅行"
+tags: 2023
 ---
 本次申请的是旅游签证 ，具体申请步骤请参考 **尼泊尔驻上海名誉领馆** 公布的[《如何申请尼泊尔旅游签证（2023年1月12日发布）》](http://www.nepalconsulateshanghai.org.cn/visa/visa.htm)教程. 
 
