--- a/_posts/2022-12-20-Charles v4.6.2长时间抓包导致OOM.md
+++ b/_posts/2022-12-20-Charles v4.6.2长时间抓包导致OOM.md
@@ -2,8 +2,8 @@
 layout: mypost
 title: "Charles v4.6.2，长时间抓包导致OOM"
 date: 2021-12-20
-categories: "2021"
-tags: charles
+categories: "charles"
+tags: 2021
 ---
 
 ***本地环境配置:***
