--- a/_posts/2023-02-04-共青森林公园.md
+++ b/_posts/2023-02-04-共青森林公园.md
@@ -2,8 +2,8 @@
 layout: post
 title: "共青森林公园"
 date: 2023-02-04
-categories: "2023"
-tags: 胶片
+categories: "摄影"
+tags: 2023
 ---
 ![水杉](https://gateway.pinata.cloud/ipfs/QmdQZUNCmyMkniqp4CHZx5dGkomy3hxmLQ6JaXNsBvuX7d?_gl=1*22a3jr*_ga*Mjg3MzE2MDI4LjE2NzU4NTk1MjA.*_ga_5RMPXG14TE*MTY3NTg1OTUyMC4xLjEuMTY3NTg2MTkwMS41MS4wLjA.)
 ![tif](https://bafybeifkgjlanfqzavl4juwpwcadl57fskmlk5wbejyavkiuezo7icdvci.ipfs.nftstorage.link/ipfs/bafybeifkgjlanfqzavl4juwpwcadl57fskmlk5wbejyavkiuezo7icdvci/000004.tif)
