add some _posts

--- a/_posts/2022-12-20-dig命令简单使用.md
+++ b/_posts/2022-12-20-dig命令简单使用.md
@@ -1,8 +1,8 @@
-﻿---
+---
 layout: mypost
-title: "DNS解析"
+title: "dig命令简单使用"
 date: 2022-12-20
-categories: "dns"
+categories: "linux"
 tags: 2022
 ---
 ### dig命令
