--- a/_posts/2023-06-02-tail命令简单使用.md
+++ b/_posts/2023-06-02-tail命令简单使用.md
@@ -8,15 +8,27 @@ tags: 2023
 
 tail 命令可用于查看文件的内容,测试用我们经常使用应该命令去查看服务端日志。
 
-- 默认输出最后 10 行的日志
+- 默认输出app.log最后 10 行的日志
 
   ```shell
   tail app.log
   ```
 
-- 实时查看文件内容的变化：
+- 实时查看app.log文件内容的变化：
   ```shell
   tail -f app.log
   ```
 
-- 
+- 显示app.log文件第 20 行至末尾
+
+  ```shell
+  tail -n +20 app.log
+  ```
+
+- 显示app.log文件最后 20 行
+
+  ```shell
+  tail -n 20 app.log
+  ```
+
+  
