feat(*): add some posts

--- a/_posts/2023-06-15-为什么需要将给第三方暴露的接口单独提供一个服务.md
+++ b/_posts/2023-06-15-为什么需要将给第三方暴露的接口单独提供一个服务.md
@@ -6,6 +6,23 @@ categories: "microservices"
 tags: 2023
 ---
 
-1. 隔离和保护：将第三方接口与核心业务逻辑分离，可以提高系统的安全性和稳定性。通过将第三方接口封装在单独的服务中，可以限制对该服务的访问和控制访问权限，从而减少潜在的风险和攻击面。
-2. 可扩展性：通过将第三方接口独立为一个服务，可以更容易地进行扩展和升级。当需要添加新的第三方接口或者更新现有接口时，只需要修改独立的服务而不影响核心业务逻辑。这样可以降低系统的耦合度，提高系统的灵活性和可维护性。
-3. 降低复杂性：将第三方接口单独提供一个服务可以简化系统架构和代码结构。通过将第三方接口的相关代码和逻辑分离出来，可以使核心业务逻辑更加清晰和简洁，便于理解和维护。
+最近在做架构拆分的工作，在对于是否需要将对外接口从核心服务中迁出有了争议，本司是没有将对外接口从核心服务里独立出来的，而前司的服务架构，会将对外调用的接口放在一个单独的服务里，专门承接对外调用。
+
+从技术架构方面来看就有以下优点：
+
+1. 隔离和保护
+
+   将第三方接口与核心业务逻辑分离，可以提高系统的安全性和稳定性。通过将第三方接口封装在单独的服务中，可以限制对该服务的访问和控制访问权限，从而减少潜在的风险和攻击面。
+
+2. 可扩展性
+
+   通过将第三方接口独立为一个服务，可以更容易地进行扩展和升级。当需要添加新的第三方接口或者更新现有接口时，只需要修改独立的服务而不影响核心业务逻辑。这样可以降低系统的耦合度，提高系统的灵活性和可维护性。
+
+3. 降低复杂性
+
+   将第三方接口单独提供一个服务可以简化系统架构和代码结构。通过将第三方接口的相关代码和逻辑分离出来，可以使核心业务逻辑更加清晰和简洁，便于理解和维护。
+
+
+
+可惜开发认为该点在当前阶段中价值不大，遂罢。
+
