docs(*): add some posts

--- a/_posts/2023-07-03-sngrep实践.md
+++ b/_posts/2023-07-03-sngrep实践.md
@@ -17,15 +17,36 @@ yum copr enable irontec/sngrep
 yum install sngrep
 ```
 
-# 使用
+# 命令使用
 
-实时捕获 SIP 信令：
+```tex
+-h --help：显示帮助信息
+-V --version：显示版本信息
+-d --device：指定抓包的网卡
+-I --input：从pacp文件中解析sip包
+-O --output：输出捕获的包到pacp文件中
+-c --calls：仅显示邀请消息
+-r --rtp：捕获RTP数据包有效载荷捕获rtp包
+-l --limit：限制捕获对话的数量
+-i --icase：使大小写不敏感
+-v --invert：颠倒（不太明白）
+-N --no-interface：不显示sngrep界面，仅捕获
+-q --quiet：不要在无界面模式下打印捕获的对话框
+-D --dump-config：打印活动的配置设置并退出
+-f --config：从文件中读取配置
+-R --rotate：达到捕获限制时轮换呼叫。
+-H --eep-send：荷马sipcapture网址（udp：XXXX：XXXX）
+-L --eep-listen：监听封装的数据包（udp：XXXX：XXXX）
+-k --keyfile：RSA私钥文件解密捕获的数据包
+```
+
+**实时捕获 SIP 信令并输入文件"save.pcap"：**
 
 ```shell
 sngrep -d eth0 -O save.pcap port 5060 and udp
 ```
 
-查看信令文件：
+**查看信令文件：**
 
 ```shell
 sngrep -I file.pcap
@@ -33,6 +54,6 @@ sngrep -I file.pcap
 
 # 参考
 
-- [sngrep使用](https://github.com/irontec/sngrep)
+- [sngrep使用](https://github.com/irontec/sngrep/wiki)
 - [sngrep安装](https://github.com/irontec/sngrep)
 
