docs(*): add some posts

--- a/_posts/2023-07-24-接口自动化分层实践.md
+++ b/_posts/2023-07-24-接口自动化分层实践.md
@@ -12,7 +12,7 @@ tags: 2023
 
 > 新增外呼任务--执行外呼任务--查看外呼任务详情
 
-![image-20230809141636418](../img/image-20230809141636418.png)
+![image-20230809141636418]({{site.url}}/img/image-20230809141636418.png)
 
 根据接口测试三步走来实现：
 
