--- a/_posts/2023-10-16-JMeter实践-临界部分控制器.md
+++ b/_posts/2023-10-16-JMeter实践-临界部分控制器.md
@@ -1,8 +1,8 @@
 ---
 layout: mypost
-title: "JMeter实践-Critical Section Controller"
+title: "JMeter实践-临界部分控制器"
 date: 2023-10-16
-categories: "Jmeter"
+categories: "JMeter"
 tags: 2023
 ---
 
@@ -16,7 +16,5 @@ Jmeter 提供了一个控制器：Critical Section Controller(临界部分控制
 
 ### 举例
 
-
-
-![image-20231020144129034](../img/image-20231020144129034.png)
+![image-20231020144129034]({{site.url}}/img/image-20231020144129034.png)
 
