--- a/_posts/2023-10-17-JMeter压测实践.md
+++ b/_posts/2023-10-17-JMeter压测实践.md
@@ -1,8 +1,8 @@
 ---
 layout: mypost
 title: "JMeter压测实践"
-date: 2023-10-16
-categories: "性能测试"
+date: 2023-10-17
+categories: "JMeter"
 tags: 2023
 ---
 
