--- a/_posts/2023-10-19-JMeter实践-参数化.md
+++ b/_posts/2023-10-19-JMeter实践-参数化.md
@@ -1,8 +1,8 @@
 ---
 layout: mypost
 title: "JMeter实践-参数化"
-date: 2023-10-16
-categories: "Jmeter"
+date: 2023-10-19
+categories: "JMeter"
 tags: 2023
 ---
 
