docs(*): add some posts

--- a/_posts/2023-09-12-git操作指北.md
+++ b/_posts/2023-09-12-git操作指北.md
@@ -1,3 +1,11 @@
+---
+layout: mypost
+title: "Git 操作指北"
+date: 2023-10-16
+categories: "Git"
+tags: 2023
+---
+
 - git清除缓存
 
     ``git rm -r --cached .``
