--- a/_posts/2023-10-21-黄山出行计划.md
+++ b/_posts/2023-10-21-黄山出行计划.md
@@ -12,7 +12,7 @@ tags: 2023
 
 天气：
 
-![img](../img/6108951f-fe81-4728-90ee-6fe7cfe135af.png)
+![img]({{site.url}}/img/6108951f-fe81-4728-90ee-6fe7cfe135af.png)
 
 
 ## **交通**
